tests/misc_tests/type_eq_ui_tests/projection_type-err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:5:5
  |
4 | fn in_ref_to_different_type<L, R>(te: TypeEq<L, R>) -> TypeEq<&'static u8, &'static u16> {
  |                             - this type parameter      --------------------------------- expected `TypeEq<&'static u8, &'static u16>` because of return type
5 |     te.in_ref()
  |     ^^^^^^^^^^^ expected `TypeEq<&u8, &u16>`, found `TypeEq<&L, &R>`
  |
  = note: expected struct `TypeEq<&'static u8, &'static u16>`
             found struct `TypeEq<&L, &R>`

error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:9:5
  |
8 | fn in_mut_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<&'a mut u8, &'a mut u16> {
  |                                 - this type parameter      ------------------------------- expected `TypeEq<&'a mut u8, &'a mut u16>` because of return type
9 |     te.in_mut()
  |     ^^^^^^^^^^^ expected `TypeEq<&mut u8, &mut u16>`, found `TypeEq<&mut L, &mut R>`
  |
  = note: expected struct `TypeEq<&'a mut u8, &'a mut u16>`
             found struct `TypeEq<&mut L, &mut R>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:13:5
   |
12 | fn map_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<u8, u16> {
   |                                                         --------------- expected `TypeEq<u8, u16>` because of return type
13 |     te.map(Mapper)
   |     ^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<[L; 1], [R; 1]>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<[L; 1], [R; 1]>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:17:5
   |
16 | fn project_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<u8, u16> {
   |                                                             --------------- expected `TypeEq<u8, u16>` because of return type
17 |     te.project::<Mapper>()
   |     ^^^^^^^^^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<[L; 1], [R; 1]>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<[L; 1], [R; 1]>`
